# todo_repository1

./: .gitignore  TODO.py  database.py  main.py  pyproject.toml  requirements-txt
main_todo/: console.py  db.py  settings.py  start_function.py  xlsx_and_csv.py
